16751
```scala
class C extends ScalaObject
```
```scala
Test.scala:1: error: trait ScalaObject is inherited twice
class C extends ScalaObject
                ^
Test.scala:1: error: trait ScalaObject is inherited twice
class C extends ScalaObject
        ^
two errors found
```
